📦 NEW: Created side nav links + use constants when sizing content div

--- a/src/common/styles/mixins.scss
+++ b/src/common/styles/mixins.scss
@@ -1,4 +1,5 @@
+@import "./functions.scss";
+
 @mixin transparentBackgroundColorMixin($color, $alpha) {
-    background-color: rgba(red($color), green($color), blue($color), $alpha) !important;
-  }
-  
+  background-color: applyAlphaToColor($color, $alpha) !important;
+}
