--- a/src/common/styles/_variables.scss
+++ b/src/common/styles/_variables.scss
@@ -28,7 +28,7 @@ $green:   #00bc8c !default;
 $teal:    #20c997 !default;
 $cyan:    #3498db !default;
 
-$primary:       $blue !default;
+$primary:       $cyan !default;
 $secondary:     $gray-700 !default;
 $success:       $green !default;
 $info:          $cyan !default;
