--- a/src/common/styles/_variables.scss
+++ b/src/common/styles/_variables.scss
@@ -12,9 +12,9 @@ $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #888 !default;
-$gray-700: #444 !default;
-$gray-800: #303030 !default;
-$gray-900: #222 !default;
+$gray-700: #333 !default;
+$gray-800: #2f3136 !default;
+$gray-900: #202225 !default;
 $black:    #000 !default;
 
 $blue:    #375a7f !default;
@@ -35,7 +35,7 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-500 !default;
-$dark:          $gray-800 !default;
+$dark:          $gray-900 !default;
 
 $yiq-contrasted-threshold:  175 !default;
 
