--- a/src/common/styles/_variables.scss
+++ b/src/common/styles/_variables.scss
@@ -71,6 +71,7 @@ $input-group-addon-color:           $gray-500 !default;
 $input-group-addon-bg:              $gray-700 !default;
 $custom-file-color:                 $gray-500 !default;
 $custom-file-border-color:          $body-bg !default;
+$input-color:                      $gray-700 !default;
 
 // Dropdowns
 
