--- a/src/common/styles/_variables.scss
+++ b/src/common/styles/_variables.scss
@@ -11,10 +11,12 @@ $gray-200: #ebebeb !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
+$gray-550: #8e9297 !default;
 $gray-600: #888 !default;
-$gray-700: #333 !default;
+$gray-700: #36393f !default;
 $gray-800: #2f3136 !default;
 $gray-900: #202225 !default;
+
 $black:    #000 !default;
 
 $blue:    #375a7f !default;
@@ -36,6 +38,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-500 !default;
 $dark:          $gray-900 !default;
+$dark-text:     $gray-550 !default;
 
 $yiq-contrasted-threshold:  175 !default;
 
@@ -68,12 +71,13 @@ $table-striped-bg:            rgba($black, $table-striped-bg-factor) !default;
 
 // Forms
 
-$input-border-color:                $body-bg !default;
+$input-border-color:                $gray-900 !default;
 $input-group-addon-color:           $gray-500 !default;
-$input-group-addon-bg:              $gray-700 !default;
+$input-group-addon-bg:              $gray-800 !default;
+$input-group-addon-border-color:    $gray-900 !default;  
 $custom-file-color:                 $gray-500 !default;
 $custom-file-border-color:          $body-bg !default;
-$input-color:                      $gray-700 !default;
+$input-color:                       $gray-700 !default;
 
 // Dropdowns
 
